samples/_failures_safe/1761200365_473179_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_dec3185d.c: In function ‘get_token’:
./samples/SAFE/__tmp_dec3185d.c:168:5: error: expected identifier at end of input
  168 |     token->
      |     ^~~~~
./samples/SAFE/__tmp_dec3185d.c:168:5: error: expected declaration or statement at end of input
